redisign report