@@ -26,7 +26,7 @@ import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
@@ -150,7 +150,7 @@ public class HealthQualReportBuilder extends UiUtils{
 		out.flush();
 		out.close();
 		
-		return DatatypeConverter.printBase64Binary(out.toByteArray());
+		return Base64.getEncoder().encodeToString(out.toByteArray());
 	}
 	
 	private ContainerTag buildTables() {
